# nds-testing

./: .gitignore  Cargo.toml  Makefile  TODO  armv5te-none-eabi.json  thumbv5te-none-eabi.json
.cargo/: config
arm7/: main.s
assets/wood/: wood.h
src/: color.rs  display.rs  fb_demo.rs  font.rs  framebuffer.rs  main.rs  mode_0.rs  units.rs  vram.rs
src/vram/: framebuffer.rs  mod.rs
