[package]
name = "test-arm9"
version = "0.1.0"
authors = ["James Pruitt <jamescpruitt@gmail.com>"]
edition = "2018"

[dependencies]
numtoa = "0.2.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.font8x8]
version = "0.2.5"
default-features = false
features = ["unicode"]
