[package]
name = "test-arm9"
version = "0.1.0"
authors = ["James Pruitt <jamescpruitt@gmail.com>"]
edition = "2018"

[[bin]]
name = "fb_demo"
path = "src/fb_demo.rs"

[[bin]]
name = "mode_0"
path = "src/mode_0.rs"

[dependencies]
nds-rt = { path = "../nds-rs/rt" }
nds-panic = { path = "../nds-rs/panic" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.font8x8]
version = "0.2.5"
default-features = false
features = ["unicode"]
